Fixed overflow for panel

--- a/moodle/theme/mobilev1/style/pagelayout.css
+++ b/moodle/theme/mobilev1/style/pagelayout.css
@@ -34,6 +34,11 @@
 #page-content #region-main-wrap {float:none;position:relative;right:0;width:100%;}
 #page-content {clear:both;float:none;overflow:hidden;position:relative;width:100%;min-width:0px;}
 
+/* Hide the overflow content caused by the panel*/
+.ui-page-active.ui-page-panel{
+	overflow-y: hidden!important;
+}
+
 
 
 .skip-bloc,
